--- a/arch/arm/boot/dts/qcom/apq8096-camera-sensor-sbc.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8096-camera-sensor-sbc.dtsi
@@ -156,8 +156,8 @@
 		cell-index = <1>;
 		compatible = "qcom,camera";
 		reg = <0x1>;
-		qcom,csiphy-sd-index = <1>;
-		qcom,csid-sd-index = <1>;
+		qcom,csiphy-sd-index = <2>;
+		qcom,csid-sd-index = <2>;
 		qcom,mount-angle = <0>;
 		//qcom,eeprom-src = <&eeprom1>;
 		//qcom,actuator-src = <&actuator1>;
@@ -169,33 +169,34 @@
 		/* cam_vio-supply = <&vph_pwr_vreg>; */
 		/* cam_vana-supply = <&vph_pwr_vreg>; */
 		qcom,cam-vreg-name = "cam_vdig", "cam_vio", "cam_vana";
-		qcom,cam-vreg-min-voltage = <1000000 0 3150000>;
-		qcom,cam-vreg-max-voltage = <1000000 0 3600000>;
+		qcom,cam-vreg-min-voltage = <1300000 0 2500000>;
+		qcom,cam-vreg-max-voltage = <1300000 0 2500000>;
 		qcom,cam-vreg-op-mode = <105000 0 80000>;
 		qcom,gpio-no-mux = <0>;
 		pinctrl-names = "cam_default", "cam_suspend";
-		pinctrl-0 = <&cam_sensor_mclk1_active &cam_csi1_sensor_active>;
-		pinctrl-1 = <&cam_sensor_mclk1_suspend
-				&cam_csi1_sensor_suspend>;
-		gpios = <&tlmm 14 0>,
-			<&tlmm 63 0>,
-			<&tlmm 62 0>;
+		pinctrl-0 = <&cam_sensor_mclk2_active &cam_csi2_sensor_active>;
+		pinctrl-1 = <&cam_sensor_mclk2_suspend
+				&cam_csi2_sensor_suspend>;
+		gpios = <&tlmm 15 0>,
+			<&tlmm 23 0>,
+			<&tlmm 26 0>;
 		qcom,gpio-reset = <1>;
 		qcom,gpio-standby = <2>;
 		qcom,gpio-req-tbl-num = <0 1 2>;
 		qcom,gpio-req-tbl-flags = <1 0 0>;
-		qcom,gpio-req-tbl-label = "CAMIF_MCLK1",
-					  "CAM_RESET1",
-					  "CAM_STANDBY1";
+		qcom,gpio-req-tbl-label = "CAMIF_MCLK2",
+					  "CAM_RESET2",
+					  "CAM_STANDBY2";
 		qcom,sensor-position = <1>;
 		qcom,sensor-mode = <0>;
-		qcom,cci-master = <0>;
+		qcom,cci-master = <1>;
 		status = "ok";
-		clocks = <&clock_mmss clk_mclk1_clk_src>,
-			<&clock_mmss clk_camss_mclk1_clk>;
+		clocks = <&clock_mmss clk_mclk2_clk_src>,
+			<&clock_mmss clk_camss_mclk2_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
 	};
 
+#if 0
 	qcom,camera@2 {
 		cell-index = <2>;
 		compatible = "qcom,camera";
@@ -238,4 +239,5 @@
 			<&clock_mmss clk_camss_mclk2_clk>;
 		clock-names = "cam_src_clk", "cam_clk";
 	};
+#endif
 };
