drm/msm/hdmi: hdmi audio codec added
hdmi audio codec added for apq8016

Signed-off-by: Laxman Siripuram <laxman@inforcecomputing.com>
Signed-off-by: Vinay Simha BN <vinaysimha@inforcecomputing.com>

--- a/arch/arm/boot/dts/qcom/msm8996-mdss.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-mdss.dtsi
@@ -126,6 +126,10 @@ mdss: mdss@900000 {
 						};
 					};
 				};
+
+				hdmi_audio: qcom,msm-hdmi-audio-rx {
+					compatible = "qcom,msm-hdmi-audio-codec-rx";
+				};
 			};
 
 			hdmi_phy: hdmi-phy@9a0600 {
