--- a/arch/arm/boot/dts/qcom/apq8096-sbc.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8096-sbc.dtsi
@@ -577,7 +577,7 @@
 			"SpkrRight IN", "SPK2 OUT";
 
 		qcom,hdmi-audio-rx;
-//		asoc-codec = <&stub_codec>, <&hdmi_audio>;
+		asoc-codec = <&stub_codec>, <&hdmi_audio>;
 		asoc-codec-names = "msm-stub-codec.1",
 					"msm-hdmi-audio-codec-rx";
 	};
