--- a/drivers/media/platform/Kconfig
+++ b/drivers/media/platform/Kconfig
@@ -277,3 +277,5 @@ config VIDEO_MEM2MEM_TESTDEV
 endif #V4L_TEST_DRIVERS
 
 source "drivers/media/platform/msm/Kconfig"
+
+source "drivers/media/platform/qcom/Kconfig"
